tweak to fix hero col alignment
.hero-col h1{
    margin-top: -2.3rem;

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ span.logo{
     align-self:flex-start;
 }
 .hero-col h1{
+    margin-top: -2.3rem;
     display:inline;
     font-size:48px;
     font-weight: 900;
